tests/baselines/reference/emitRestParametersMethodES6(strict=true).errors.txt
emitRestParametersMethodES6.ts(2,31): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
emitRestParametersMethodES6.ts(4,16): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
emitRestParametersMethodES6.ts(5,27): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
emitRestParametersMethodES6.ts(9,17): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
emitRestParametersMethodES6.ts(11,16): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
emitRestParametersMethodES6.ts(12,27): error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.


==== emitRestParametersMethodES6.ts (6 errors) ====
    class C {
        constructor(name: string, ...rest) { }
                                  ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    
        public bar(...rest) { }
                   ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
        public foo(x: number, ...rest) { }
                              ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    }
    
    class D {
        constructor(...rest) { }
                    ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    
        public bar(...rest) { }
                   ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
        public foo(x: number, ...rest) { }
                              ~~~~~~~
!!! error TS7019: Rest parameter 'rest' implicitly has an 'any[]' type.
    }
    